# openfoam-adapter

./: .clang-format  .gitattributes  .gitignore  .gitmodules  .markdown-link-check-config.json  .markdownlint.json  .mdlrc  .pre-commit-config.yaml  .travis.yml  182.md  183.md  255.md  Adapter.C  Adapter.H  Allclean  Allwmake  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Config.C  Config.H  CouplingDataUser.C  CouplingDataUser.H  Interface.C  Interface.H  LICENSE  README.md  Utilities.C  Utilities.H  clockValue.C  clockValue.H  clockValueI.H  preciceAdapter.C  preciceAdapter.H  preciceAdapterFunctionObject.C  preciceAdapterFunctionObject.H  primitivePatchInterpolation.H
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: issue-template.md
.github/workflows/: Dockerfile  build-custom.yml  build-docker.yml  build-openfoam8.yml  build.yml  check-format.yml  check-links.yml  check-markdown.yml  check-shell.yml  check-style.yml  check.yml  checks.yml  install-dependencies-openfoam8.sh  install-dependencies.sh  install-openfoam.sh  markdown-link-check-config.json  pre-commit.yml  run-tests-on-pr.yaml  sync-version.yml  system-tests.yaml  update-website.yml
AITS/: AITS.C  AITS.H  TemperatureAIT.C  TemperatureAIT.H
BoundaryConditions/: Allclean  Allwmake  apiCoupledTemperatureMixedFvPatchScalarField.C  apiCoupledTemperatureMixedFvPatchScalarField.H
BoundaryConditions/Make/: files  options
BoundaryConditions/apiCoupledTemperature/: apiCoupledTemperatureFvPatchScalarField.C  apiCoupledTemperatureFvPatchScalarField.H
CHT/: CHT.C  CHT.H  HeatFlux.C  HeatFlux.H  HeatFlux_base.C  HeatFlux_base.H  HeatFlux_compressible.C  HeatFlux_compressible.H  HeatFlux_incompressible.C  HeatFlux_incompressible.H  HeatTransferCoefficient.C  HeatTransferCoefficient.H  HeatTransferCoefficient_base.C  HeatTransferCoefficient_base.H  HeatTransferCoefficient_compressible.C  HeatTransferCoefficient_compressible.H  HeatTransferCoefficient_incompressible.C  HeatTransferCoefficient_incompressible.H  KappaEffective.C  KappaEffective.H  KappaEffective_base.C  KappaEffective_base.H  KappaEffective_compressible.C  KappaEffective_compressible.H  KappaEffective_incompressible.C  KappaEffective_incompressible.H  ModuleCHT.C  SinkTemperature.C  SinkTemperature.H  Temperature.C  Temperature.H
Core/: Adapter.C  Adapter.H  CouplingDataUser.C  Interface.C  Interface.H  OpenFOAMSettings.H  preciceAdapterFunctionObject.C
CouplingDataUser/: CouplingDataUser.C  CouplingDataUser.H  CouplingDataUser.h  HeatFlux.C  HeatFlux.H  HeatTransferCoefficient.C  HeatTransferCoefficient.H  KappaEffective.C  KappaEffective.H  SinkTemperature.C  SinkTemperature.H  Temperature.C  Temperature.H
CouplingDataUser/CouplingDataReader/: BuoyantPimpleHeatFluxBoundaryCondition.C  BuoyantPimpleHeatFluxBoundaryCondition.H  BuoyantPimpleHeatFluxBoundaryCondition.h  CouplingDataReader.H  CouplingDataReader.h  HeatFluxBoundaryCondition.C  HeatFluxBoundaryCondition.H  HeatFluxBoundaryCondition.h  TemperatureBoundaryCondition.C  TemperatureBoundaryCondition.H  TemperatureBoundaryCondition.h
CouplingDataUser/CouplingDataWriter/: BuoyantPimpleHeatFluxBoundaryValues.C  BuoyantPimpleHeatFluxBoundaryValues.H  BuoyantPimpleHeatFluxBoundaryValues.h  CouplingDataWriter.H  CouplingDataWriter.h  HeatFluxBoundaryValues.C  HeatFluxBoundaryValues.H  HeatFluxBoundaryValues.h  (+3 more)
FF/: Alpha.C  Alpha.H  AlphaGradient.C  AlphaGradient.H  FF.C  FF.H  Gh.C  Gh.H  HU_SWE.C  HU_SWE.H  HV_SWE.C  HV_SWE.H  Height_SWE.C  Height_SWE.H  ModuleFF.C  Phi.C  Phi.H  Pressure.C  Pressure.H  PressureGradient.C  PressureGradient.H  Prgh.C  Prgh.H  PrghGradient.C  PrghGradient.H  TempVelocity3d.C  TempVelocity3d.H  Temperature.C  Temperature.H  TemperatureGradient.C  TemperatureGradient.H  ThreeDGh.C  ThreeDGh.H  Velocity.C  Velocity.H  VelocityGradient.C  VelocityGradient.H
FSI/: Displacement.C  Displacement.H  DisplacementDelta.C  DisplacementDelta.H  FSI.C  FSI.H  Force.C  Force.H  ForceBase.C  ForceBase.H  ModuleFSI.C  Stress.C  Stress.H  Velocity.C  Velocity.H  volDisplacement.C  volDisplacement.H  volDisplacementDelta.C  volDisplacementDelta.H
Fluids/: Fluids.C  Fluids.H  Pressure.C  Pressure.H  Velocity.C  Velocity.H
Make/: files  options
Momentum/: Generic_volScalarField.H  Generic_volVectorField.C  Momentum.C  Momentum.H  Your_Volume_Field.C  Your_Volume_Field.H
Tests/UnitTests/: CMakeLists.txt  README.MD  precice-adapter-config.yml  precice-config_serial.xml
Tests/UnitTests/AdapterTest/: AdapterTest.cc  AdapterUnittestIncludes.h
Tests/UnitTests/MockAdapter/: CHTMock.cpp  CHTMock.h  FSIMock.cpp  FSIMock.h  InterfaceMock.h  UtilitiesMock.cpp  UtilitiesMock.h
Tests/UnitTests/MockFOAM/: IOStreamsMock.h  IOstreamsMock.h  PstreamMock.h  constantsMock.h  errorMock.h  fileNameMock.h  fvCFDMock.h  fvMeshMock.cpp  fvMeshMock.h  meshMock.h  messageStreamMock.h  timeMock.h
Tests/UnitTests/MockpreCICE/: SolverInterfaceMock.cpp  SolverInterfaceMock.hpp
Tests/UnitTests/TestFolder/: precice-adapter-config.yml
Tests/UnitTests/TestFolder/FAIL_TEST_XML/: precice-adapter-config.yml  precice-adapter-missing-interfaces.yml  precice-adapter-missing-mesh.yml  precice-adapter-missing-participant.yml  precice-adapter-missing-patches.yml  precice-adapter-missing-precice-file.yml
Volume_Coupling/: Fluid_Velocity.C  Fluid_Velocity.H  Generic_volScalarField.C  Generic_volScalarField.H  Generic_volVectorField.C  Generic_volVectorField.H  Momentum.H  Volume_Coupling.C  Volume_Coupling.H
changelog-entries/: 168.md  169.md  173.md  180.md  185.md  188.md  195.md  197.md  201.md  203.md  206.md  211.md  220.md  224.md  230.md  236.md  241.md  244.md  245.md  246.md  247.md  248.md  254.md  255.md  256.md  262.md  264.md  270.md  281.md  285.md  287.md  289.md  296.md  297.md  298.md  299.md  301.md  308.md  330.md  331.md  (+1 more)
docs/: README.md  config.md  extend.md  get.md  openfoam-support.md
tools/: create-release-archives.sh  format-code.sh  release_pull_request_template.md
tutorials/: README.md
variants/: 4.1  default  dev  v1806  v1912
(+630 files in other folders)
